# guards

./: .gitignore  LICENSE.txt  Makefile  README.md  setup.cfg  setup.py
examples/: README.md
examples/01_simple_guard/: README.md  app.py
examples/02_multiple_guards/: README.md  app.py
examples/03_context_manager/: README.md  app.py
examples/04_events/: README.md  app.py
examples/05_closed_guards/: README.md  app.py
examples/06_multiple_events/: README.md  app.py
examples/07_context_store/: README.md  app.py
examples/08_filter_manager/: README.md  app.py
guards/: __init__.py  functional.py
guards/builtins/: __init__.py  all_guards.py  any_guard.py  guard_container.py
guards/builtins/tests/: test_all_guards.py  test_any_guard.py  test_guard_container.py
guards/context/: __init__.py  context.py  context_manager.py
guards/context/tests/: test_context.py  test_context_manager.py
guards/core/: events.py  exception.py  guard.py  guard_manager.py
guards/core/tests/: test_events.py  test_guard.py  test_guard_manager.py
guards/utils/filter_manager/: __init__.py  filter_chain.py  filter_compiler.py  filter_identifier.py  filter_list.py  filter_manager.py
guards/utils/filter_manager/tests/: test_filter_chain.py  test_filter_compiler.py  test_filter_list.py  test_filter_manager.py
guards/utils/transactions/: __init__.py  transaction_manager.py
guards/utils/transactions/tests/: test_transaction_manager.py
