[project]
name = "guards"
version = "0.0.1"
author ="Alias Innovations"
description = "A package to ensure restrictions in form of guards in an application"
readme = "README.md"
requires-python = ">=3.7"
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[project.urls]
"Homepage" = "https://github.com/Alias-Innovations/python-guards"